--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<script type="text/javascript" async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-MML-AM_CHTML">
-  </script>
+<!--<link rel="stylesheet" href="style.css">-->
+
+<script type="text/javascript" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 <script src="script.js"></script>
 
 <body>
@@ -24,10 +24,10 @@
     </head>
 
     <body>
+
       When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
       $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
     </body>
-
 
     <div>
       <label for="strtext">Type in here:</label><br>
