--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!--<link rel="stylesheet" href="style.css">-->
+
+<script type="text/javascript" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 <script src="script.js"></script>
 
 <body>
@@ -6,25 +9,53 @@
   <html>
 
   <head>
-    <script type="text/javascript" async
-      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-MML-AM_CHTML">
-      </script>
     <meta charset="UTF-8" />
-    <title>Calculus Site</title>
+    <title class="Calc">Calculus Site</title>
   </head>
 
-  <body>
+  <body class="Calc">
+    </div class="Calc">
+    <h1 class="Calc">Calculator</h1>
     </div>
-    <h1>Calculator</h1>
-    </div>
-    <div>
+
+    <div class="Calc">
       <label for="strtext">Type in here:</label><br>
       <input type="text" id="strtext">
       <input type="submit" onclick="calculate()" value="Calculate!">
     </div>
-    <div id="output">
-
+    <div id="output" class="Calc">
+      The answer you provided is: \({}\).
     </div>
+    <nav id="navbar">
+      <header>JS Documentation</header>
+      <ul>
+        <li><a class="nav-link" href="#Introduction">Introduction</a></li>
+        <li>
+          <a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
+        </li>
+        <li>
+          <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+        </li>
+        <li><a class="nav-link" href="#Hello_world">Hello world</a></li>
+        <li><a class="nav-link" href="#Variables">Variables</a></li>
+        <li>
+          <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
+        </li>
+        <li><a class="nav-link" href="#Variable_scope">Variable scope</a></li>
+        <li><a class="nav-link" href="#Global_variables">Global variables</a></li>
+        <li><a class="nav-link" href="#Constants">Constants</a></li>
+        <li><a class="nav-link" href="#Data_types">Data types</a></li>
+        <li>
+          <a class="nav-link" href="#if...else_statement">if...else statement</a>
+        </li>
+        <li><a class="nav-link" href="#while_statement">while statement</a></li>
+        <li>
+          <a class="nav-link" href="#Function_declarations">Function declarations</a>
+        </li>
+        <li><a class="nav-link" href="#Reference">Reference</a></li>
+      </ul>
+    </nav>
+
   </body>
 
   </html>
