--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<!--<link rel="stylesheet" href="style.css">-->
-
-<script type="text/javascript" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-<script src="script.js"></script>
+<link rel="stylesheet" href="style.css">
 
 <body>
   <!DOCTYPE html>
   <html>
 
   <head>
+    <script type="text/javascript" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
+    <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8" />
     <title class="Calc">Calculus Site</title>
   </head>
@@ -19,40 +22,44 @@
     </div>
 
     <div class="Calc">
+      <p>Type in $2 * x$, not $2x$. Do not type in $\pi$ or divide by $0$. $e$ is acceptable. </p>
+      <p>Handles all basic arithmetic operations as well as $\cos, \sin, \tan, \arcsin, \arccos, \arctan, \text{ and}
+        \ln$.</p>
+      <p>Does not handle hyperbolic trig functions as well as absolute values.</p>
       <label for="strtext">Type in here:</label><br>
       <input type="text" id="strtext">
       <input type="submit" onclick="calculate()" value="Calculate!">
     </div>
     <div id="output" class="Calc">
-      The answer you provided is: \({}\).
+      The answer is: \({}\)
     </div>
-    <nav id="navbar">
-      <header>JS Documentation</header>
+    <!--<nav id="navbar">
+      <header></header>
       <ul>
-        <li><a class="nav-link" href="#Introduction">Introduction</a></li>
+        <li><a class="nav-link" href="#Introduction"></a></li>
         <li>
-          <a class="nav-link" href="#What_you_should_already_know">What you should already know</a>
+          <a class="nav-link" href="#What_you_should_already_know"></a>
         </li>
         <li>
-          <a class="nav-link" href="#JavaScript_and_Java">JavaScript and Java</a>
+          <a class="nav-link" href="#JavaScript_and_Java"></a>
         </li>
-        <li><a class="nav-link" href="#Hello_world">Hello world</a></li>
-        <li><a class="nav-link" href="#Variables">Variables</a></li>
+        <li><a class="nav-link" href="#Hello_world"></a></li>
+        <li><a class="nav-link" href="#Variables"></a></li>
         <li>
-          <a class="nav-link" href="#Declaring_variables">Declaring variables</a>
+          <a class="nav-link" href="#Declaring_variables"></a>
         </li>
-        <li><a class="nav-link" href="#Variable_scope">Variable scope</a></li>
-        <li><a class="nav-link" href="#Global_variables">Global variables</a></li>
-        <li><a class="nav-link" href="#Constants">Constants</a></li>
-        <li><a class="nav-link" href="#Data_types">Data types</a></li>
+        <li><a class="nav-link" href="#Variable_scope"></a></li>
+        <li><a class="nav-link" href="#Global_variables"></a></li>
+        <li><a class="nav-link" href="#Constants"></a></li>
+        <li><a class="nav-link" href="#Data_types"></a></li>
         <li>
-          <a class="nav-link" href="#if...else_statement">if...else statement</a>
+          <a class="nav-link" href="#if...else_statement"></a>
         </li>
-        <li><a class="nav-link" href="#while_statement">while statement</a></li>
+        <li><a class="nav-link" href="#while_statement"></a></li>
         <li>
-          <a class="nav-link" href="#Function_declarations">Function declarations</a>
+          <a class="nav-link" href="#Function_declarations"></a>
         </li>
-        <li><a class="nav-link" href="#Reference">Reference</a></li>
+        <li><a class="nav-link" href="#Reference"></a></li>
       </ul>
     </nav>
 
