--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
       <p>Handles all basic arithmetic operations as well as $\cos, \sin, \tan, \arcsin, \arccos, \arctan, \text{ and}
         \ln$.</p>
       <p>Does not handle hyperbolic trig functions as well as absolute values.</p>
+      <p>Note: if the equation in the graphing calculator does not show up, please press the box containing the equation
+        and click one of your side arrows.</p>
       <label for="strtext">Type in here:</label><br>
       <input type="text" id="strtext">
       <input type="submit" onclick="calculate()" value="Calculate!">
@@ -34,12 +36,11 @@
     <div id="output" class="Calc">
       The answer is: \({}\)
     </div>
-    <div id="calculator" style="width: 600px; height: 400px;">
+    <div id="calculator" style="width: 100%; height: 70vh;">
       <script>
         var elt = document.getElementById('calculator');
         var calculator = Desmos.GraphingCalculator(elt);
         const element = document.getElementById("strtext")
-        calculator.setExpression({ id: 'graph1', latex: `${element.value}` });
       </script>
     </div>
 
