--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <p>Does not handle hyperbolic trig functions as well as absolute values.</p>
       <p>Note: if the equation in the graphing calculator does not show up, please press the box containing the equation
         and click one of your side arrows.</p>
+      <p><a href="mailto:13604458+lightningbolts@users.noreply.github.com">Email me</a> if there are any problems.</p>
       <label for="strtext">Type in here:</label><br>
       <input type="text" id="strtext">
       <input type="submit" onclick="calculate()" value="Calculate!">
